Updating site tagline
Signed-off-by: Aniket Pant <me@aniketpant.com>

--- a/_config.yml
+++ b/_config.yml
@@ -6,4 +6,4 @@ exclude: Rakefile, CNAME, sass/, script/, README.md
 url: http://rawrrr.github.com
 
 name: "Rawrrr"
-description: "Journal of a soul"
+tagline: "Journal of a soul"
