[Fix] site.title
Signed-off-by: Aniket Pant <me@aniketpant.com>

--- a/_config.yml
+++ b/_config.yml
@@ -5,5 +5,5 @@ exclude: Rakefile, CNAME, sass/, script/, README.md
 
 url: http://rawrrr.github.com
 
-name: "Rawrrr"
+title: "Rawrrr"
 tagline: "Journal of a soul"
