Upgrade to Jekyll 1.0
Signed-off-by: Aniket Pant <me@aniketpant.com>

--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,8 @@
 permalink: /:year/:month/:title
-auto: true
 markdown: kramdown
-exclude: Rakefile, CNAME, sass/, script/, README.md
+exclude: ['Rakefile', 'CNAME', 'sass/', 'script/', 'README.md']
 
 url: http://rawrrr.github.com
 
-title: "Rawrrr"
-tagline: "Journal of a soul"
+title: "tekina"
+tagline: "board my sinking ship"
