--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "stylesheets/inuit.css"]
 	path = stylesheets/inuit.css
-	url = git://github.com/csswizardry/inuit.css.git
+	url = https://github.com/csswizardry/inuit.css.git
